Fix Icons on Mobile

--- a/style.css
+++ b/style.css
@@ -236,4 +236,7 @@ h2 {
 		width: 30px;
 		height: 30px;
 	}
+    #social img{
+        width: 40px;
+    }
 }
